# ringer-zero

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  fake_rejection@90.py  model_analysis.ipynb  op_no_pileup.py  op_processing.py  pyproject.toml  requirements.txt  run_training.sh  run_vnoq_training.py  run_vqat_training.py  setup.sh
.github/workflows/: tests.yml
configs/: vqat_training_job.yaml
docs/diagrams/: development_process.puml  development_roadmap.puml  simplified_development_roadmap.puml
examples/: run_vnoq_training.py  run_vqat_training.py
neuralnet/: __init__.py  datasets.py  decorators.py  matplotlib.py  pydantic.py  utils.py
neuralnet/models/: mlp.py  vkan.py  vqat.py
neuralnet/quantization/: __init__.py  uniform.py
neuralnet/tensorflow/: tunning.py
neuralnet/torch/: tunning.py
notebooks/: add_kfold.ipynb  add_standard_binning_kfold.ipynb  generate_fake_data.ipynb  ingest_isabela_data.ipynb  model_analysis.ipynb  model_analysis_torch.ipynb  utils.py
ringer_zero/: __init__.py  callbacks.py  datasets.py  decorators.py  metrics.py  polars.py  root.py  slurm.py  submitit.py  tunning.py  utils.py
ringer_zero/models/: kan_torch.py  mlp.py  vkan.py  vnoq0.py  vqat.py  vqat0.py  vqat_q7.py
ringer_zero/tensorflow/: callbacks.py  metrics.py  tunning.py
ringer_zero/torch/: __init__.py  callbacks.py  inference.py  tunning.py
tests/: conftest.py
tests/data/: mlp_training_job.yaml  test_data.hdf5  test_ref.json  vkan_training_job.yaml  vqat_training_job.yaml
tests/test_models/: test_add_uniform_ptq_inference.py  test_mlp.py  (+5 more)
(+1258 files in other folders)
